fix modal dark mode

--- a/src/includes/css/variables-light.css
+++ b/src/includes/css/variables-light.css
@@ -41,3 +41,60 @@
 	border-radius: 3px;
 	margin-bottom: 1em;
 }
+
+#new-note-form-background {
+	display: none; /* Hidden by default */
+	position: fixed; /* Stay in place */
+	z-index: 1; /* Sit on top */
+	left: 0;
+	top: 0;
+	width: 100%; /* Full width */
+	height: 100%; /* Full height */
+	overflow: auto; /* Enable scroll if needed */
+	background-color: rgb(0,0,0); /* Fallback color */
+	background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  }
+  
+/* Modal Content */
+#new-note-form {
+	position: relative;
+	background-color: var(--theme-white);
+	margin: auto;
+	margin-top: 20px;
+	padding: 20px;
+	border: 1px solid #888;
+	width: 80%;
+	box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+	animation-name: animatetop;
+	animation-duration: 0.4s;
+	border-radius: 10px;
+}
+
+#new-note-form-header {
+	padding: 2px 16px;
+	color: var(--theme-white);
+  }
+
+#new-note-form-close {
+	color: grey;
+	float: right;
+	font-size: 28px;
+	font-weight: bold;
+}
+
+#new-note-form-close:hover,
+#new-note-form-close:focus {
+  color: lightgrey;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+
+@keyframes animatetop {
+	0% {
+		transform: translateY(-300px);
+	}
+	100% {
+		transform: translateY(0px);
+	}
+}
